--- a/views/show-restaurant.html
+++ b/views/show-restaurant.html
@@ -38,23 +38,71 @@
             </div>
             <div class="row resbody__wrapimg">
                 <div class="col-md-8">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading"><i class="fa fa-home"></i> ข้อมูลร้าน</div>
+                    <div class="panel panel-success" style="border-radius: 0px;">
+                        <div class="panel-heading" style="border-radius: 0px;"><i class="fa fa-home"></i> ข้อมูลร้าน</div>
                         <div class="panel-body">
                             {{ restaurant.content }}
                         </div>
                     </div>
-                    <div class="panel panel-primary">
-                        <div class="panel-heading"><i class="fa fa-home"></i> ข้อมูลร้าน</div>
+                    <div class="panel panel-warning" style="border-radius: 0px;">
+                        <div class="panel-heading" style="border-radius: 0px;"><i class="fa fa-home"></i> ข้อมูลร้าน</div>
                         <div class="panel-body">
                             sss
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="panel panel-default">
+                    <div class="panel panel-default" style="border-radius: 0px;">
                         <div class="panel-body">
-                            sss {{ divSize }}
+                            <div class="col-xs-12 resbodyscore text-center">
+                                <h1 class="text-danger"><i class="fa fa-heart" aria-hidden="true"></i> <b>8.5</b> <small>/ 10</small></h1>
+                                <p>(ผู้ให้คะแนน 10 คน)</p>
+                                <div class="col-xs-12 text-left">
+                                    <div class="row">
+                                        <div class="col-xs-6 text-left">
+                                            <label for="">บรรยากาศ</label>
+                                        </div>
+                                        <div class="col-xs-6 text-right">
+                                            <span class="label label-default">4.5</span>
+                                        </div>
+                                    </div>
+                                    <div class="progress">
+                                      <div class="progress-bar progress-bar-atm" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 text-left">
+                                    <div class="row">
+                                        <div class="col-xs-6 text-left">
+                                            <label for="">รสชาติ</label>
+                                        </div>
+                                        <div class="col-xs-6 text-right">
+                                            <span class="label label-default">8.4</span>
+                                        </div>
+                                    </div>
+                                    <div class="progress">
+                                      <div class="progress-bar progress-bar-taste" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12">
+                                    <div class="row">
+                                        <div class="col-xs-6 text-left">
+                                            <label for="">บริการ</label>
+                                        </div>
+                                        <div class="col-xs-6 text-right">
+                                            <span class="label label-default">6.5</span>
+                                        </div>
+                                    </div>
+                                    <div class="progress">
+                                      <div class="progress-bar progress-bar-service" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
+                                    </div>
+                                </div>
+
+                                <div class="col-xs-12 text-center button">
+                                    <button type="button" class="btn btn-default btn-block">ให้คะแนนร้านนี้</button>
+                                </div>
+
+
+                            </div>
                         </div>
                     </div>
                 </div>
