--- a/views/show-restaurant.html
+++ b/views/show-restaurant.html
@@ -55,7 +55,8 @@
                     <div class="panel panel-default" style="border-radius: 0px;">
                         <div class="panel-body">
                             <div class="col-xs-12 resbodyscore text-center">
-                                <h1 class="text-danger"><i class="fa fa-heart" aria-hidden="true"></i> <b>8.5</b> <small>/ 10</small></h1>
+
+                                <h1 class="text-danger"><i class="fa fa-heart" aria-hidden="true"></i> <b number-counter>{{ numScore }}</b> <small>/ 10</small></h1>
                                 <p>(ผู้ให้คะแนน 10 คน)</p>
                                 <div class="col-xs-12 text-left">
                                     <div class="row">
