--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,36 @@
 @-webkit-keyframes spin{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg)}100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes spin{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg)}100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg)}}
 .no-js #loader-wrapper{display:none}
 
+/*-------------- loading page ----------------*/
+.loader-line {
+  height: 2px;
+  width: 100%;
+  position: fixed;
+  overflow: hidden;
+  background-color: #ddd;
+  z-index: 99999;
+}
+.loader-line:before{
+  display: block;
+  position: fixed;
+  content: "";
+  left: -200px;
+  width: 200px;
+  height: 4px;
+  background-color: #e74c3c;
+  animation: loading-line 1s linear infinite;
+  z-index: 9999999;
+}
+
+@keyframes loading-line {
+    from {left: -200px; width: 30%;}
+    50% {width: 30%;}
+    70% {width: 70%;}
+    80% { left: 50%;}
+    95% {left: 120%;}
+    to {left: 100%;}
+}
+
 
 @font-face {
     font-family: thaisanslite-font;
