--- a/views/show-restaurant.html
+++ b/views/show-restaurant.html
@@ -99,7 +99,7 @@
                                 </div>
 
                                 <div class="col-xs-12 text-center button">
-                                    <button type="button" class="btn btn-default btn-block">ให้คะแนนร้านนี้</button>
+                                    <button type="button" class="btn btn-default btn-block" data-toggle="modal" data-target="#addScore">ให้คะแนนร้านนี้</button>
                                 </div>
 
 
@@ -107,6 +107,54 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="addScore" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-md">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title"><i class="fa fa-heart" aria-hidden="true"></i> ให้คะแนนร้านนี้</h4>
+            </div>
+            <div class="modal-body text-center">
+
+                <div class="row">
+                    <div class="co-xs-12">
+                        <label for="">บรรยากาศ ({{ scoreHover[0] }})</label>
+                    </div>
+                    <div class="co-xs-12 score" ng-mouseleave="scoreHover[0]=scoreClick[0]">
+                        <span class="love" ng-repeat="love in range(10) track by $index" ng-class="love<scoreHover[0] ? 'love--red' : ''">
+                            <i ng-mouseover="hoverScore(0, $index+1)" ng-click="clickScore(0, $index+1)" class="fa fa-heart" aria-hidden="true"></i>
+                        </span>
+                    </div>
+
+                    <div class="co-xs-12">
+                        <label for="">รสชาติ ({{ scoreHover[1] }})</label>
+                    </div>
+                    <div class="co-xs-12 score" ng-mouseleave="scoreHover[1]=scoreClick[1]">
+                        <span class="love" ng-repeat="love in range(10) track by $index" ng-class="love<scoreHover[1] ? 'love--red' : ''">
+                            <i ng-mouseover="hoverScore(1, $index+1)" ng-click="clickScore(1, $index+1)" class="fa fa-heart" aria-hidden="true"></i>
+                        </span>
+                    </div>
+
+                    <div class="co-xs-12">
+                        <label for="">บริการ ({{ scoreHover[2] }})</label>
+                    </div>
+                    <div class="co-xs-12 score" ng-mouseleave="scoreHover[2]=scoreClick[2]">
+                        <span class="love" ng-repeat="love in range(10) track by $index" ng-class="love<scoreHover[2] ? 'love--red' : ''">
+                            <i ng-mouseover="hoverScore(2, $index+1)" ng-click="clickScore(2, $index+1)" class="fa fa-heart" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer text-center">
+                <div class="row text-center">
+                    <button type="button" class="btn btn-success" data-dismiss="modal"><i class="fa fa-check" aria-hidden="true"></i> บันทึกคะแนน</button>
+                </div>
+
             </div>
         </div>
     </div>
