--- a/views/show-restaurant.html
+++ b/views/show-restaurant.html
@@ -57,7 +57,7 @@
                             <div class="col-xs-12 resbodyscore text-center">
 
                                 <h1 class="text-danger"><i class="fa fa-heart" aria-hidden="true"></i> <b number-counter>{{ numScore }}</b> <small>/ 10</small></h1>
-                                <p>(ผู้ให้คะแนน 10 คน)</p>
+                                <p>(ผู้ให้คะแนน {{ restaurant.numVote }} คน)</p>
                                 <div class="col-xs-12 text-left">
                                     <div class="row">
                                         <div class="col-xs-6 text-left">
@@ -99,7 +99,7 @@
                                 </div>
 
                                 <div class="col-xs-12 text-center button">
-                                    <button type="button" class="btn btn-default btn-block" data-toggle="modal" data-target="#addScore">ให้คะแนนร้านนี้</button>
+                                    <button type="button" class="btn btn-default btn-block" data-toggle="modal" data-target="#addScore" ng-click="resetScore()">ให้คะแนนร้านนี้</button>
                                 </div>
 
 
@@ -115,9 +115,9 @@
 <div id="addScore" class="modal fade" role="dialog">
     <div class="modal-dialog modal-md">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header" style="border: 0;">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title"><i class="fa fa-heart" aria-hidden="true"></i> ให้คะแนนร้านนี้</h4>
+
             </div>
             <div class="modal-body text-center">
 
@@ -150,9 +150,9 @@
                     </div>
                 </div>
             </div>
-            <div class="modal-footer text-center">
+            <div class="modal-footer" style="border: 0;">
                 <div class="row text-center">
-                    <button type="button" class="btn btn-success" data-dismiss="modal"><i class="fa fa-check" aria-hidden="true"></i> บันทึกคะแนน</button>
+                    <button type="button" class="btn btn-success" data-dismiss="modal" ng-click="addScore()"><i class="fa fa-check" aria-hidden="true"></i> บันทึกคะแนน</button>
                 </div>
 
             </div>
