add score to homepage

--- a/views/index.html
+++ b/views/index.html
@@ -81,7 +81,7 @@
                                         ฿ {{ res.price.min }}-{{ res.price.max }}
                                     </div>
                                     <div class="score">
-                                        <i class="fa fa-heart" aria-hidden="true"></i> <b>{{ res.score.totalAvg }}</b>
+                                        <i class="fa fa-heart" aria-hidden="true"></i> <b>{{ res.score }}</b>
                                     </div>
                                 </div>
                             </div>
