--- a/views/show-restaurant.html
+++ b/views/show-restaurant.html
@@ -54,7 +54,15 @@
                 <div class="col-md-4">
                     <div class="panel panel-default" style="border-radius: 0px;">
                         <div class="panel-body">
-                            <div class="col-xs-12 resbodyscore text-center">
+                            <div class="col-xs-12 resbodyscore text-center" ng-show="restaurant.numVote==0">
+                                <div class="col-xs-12 text-center">
+                                    <p>ยังไม่มีคนให้คะแนนร้านนี้</p>
+                                </div>
+                                <div class="col-xs-12 text-center button">
+                                    <button type="button" class="btn btn-warning btn-block" data-toggle="modal" data-target="#addScore" ng-click="resetScore()">ให้คะแนนร้านนี้</button>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 resbodyscore text-center" ng-show="restaurant.numVote>0">
 
                                 <h1 class="text-danger"><i class="fa fa-heart" aria-hidden="true"></i> <b number-counter>{{ numScore }}</b> <small>/ 10</small></h1>
                                 <p>(ผู้ให้คะแนน {{ restaurant.numVote }} คน)</p>
@@ -64,11 +72,11 @@
                                             <label for="">บรรยากาศ</label>
                                         </div>
                                         <div class="col-xs-6 text-right">
-                                            <span class="label label-default">4.5</span>
+                                            <span class="label label-default">{{ restaurant.score.atm }}</span>
                                         </div>
                                     </div>
                                     <div class="progress">
-                                      <div class="progress-bar progress-bar-atm" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
+                                      <div class="progress-bar progress-bar-atm" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: {{ restaurant.score.atm*10 }}%"></div>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 text-left">
@@ -77,11 +85,11 @@
                                             <label for="">รสชาติ</label>
                                         </div>
                                         <div class="col-xs-6 text-right">
-                                            <span class="label label-default">8.4</span>
+                                            <span class="label label-default">{{ restaurant.score.taste }}</span>
                                         </div>
                                     </div>
                                     <div class="progress">
-                                      <div class="progress-bar progress-bar-taste" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+                                      <div class="progress-bar progress-bar-taste" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: {{ restaurant.score.taste*10 }}%"></div>
                                     </div>
                                 </div>
                                 <div class="col-xs-12">
@@ -90,16 +98,16 @@
                                             <label for="">บริการ</label>
                                         </div>
                                         <div class="col-xs-6 text-right">
-                                            <span class="label label-default">6.5</span>
+                                            <span class="label label-default">{{ restaurant.score.service }}</span>
                                         </div>
                                     </div>
                                     <div class="progress">
-                                      <div class="progress-bar progress-bar-service" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
+                                      <div class="progress-bar progress-bar-service" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: {{ restaurant.score.service*10 }}%"></div>
                                     </div>
                                 </div>
 
                                 <div class="col-xs-12 text-center button">
-                                    <button type="button" class="btn btn-default btn-block" data-toggle="modal" data-target="#addScore" ng-click="resetScore()">ให้คะแนนร้านนี้</button>
+                                    <button type="button" class="btn btn-default btn-block" data-toggle="modal" data-target="#addScore" ng-click="resetScore();">ให้คะแนนร้านนี้</button>
                                 </div>
 
 
@@ -120,6 +128,7 @@
 
             </div>
             <div class="modal-body text-center">
+                <div ng-show="alertScore" class="alert alert-warning animated shake" role="alert">คุณยังไม่ได้ให้คะแนนร้าน!</div>
 
                 <div class="row">
                     <div class="co-xs-12">
@@ -152,7 +161,7 @@
             </div>
             <div class="modal-footer" style="border: 0;">
                 <div class="row text-center">
-                    <button type="button" class="btn btn-success" data-dismiss="modal" ng-click="addScore()"><i class="fa fa-check" aria-hidden="true"></i> บันทึกคะแนน</button>
+                    <button type="button" class="btn btn-success" ng-click="addScore(); refreshScore();"><i class="fa fa-check" aria-hidden="true"></i> บันทึกคะแนน</button>
                 </div>
 
             </div>
