--- a/views/index.html
+++ b/views/index.html
@@ -58,36 +58,40 @@
                 </div>
             </div>
             <div class="row bodycontent">
-                <section class="col-md-4 col-sm-6 bodycontent__item" ng-repeat="res in bestScoreRestaurants">
-                    <div class="col-xs-12 bodycontent__img boxshadow">
-                        <a href="#/restaurant/{{ res.id }}">
-                            <span class="location">
-                                    <i class="fa fa-map-marker" aria-hidden="true"></i> {{ res.area }}
-                                </span>
-                            <div class="row wrapimg img-effect-2" crop-img wrap-height="0.5" ng-style="wrapSize">
-                                <img class="img" ng-style="imgSize" ng-src="upload/{{ res.img }}_thumb.jpg" />
-                            </div>
-                        </a>
-                    </div>
-                    <div class="row bodycontent__detail">
-                        <div class="col-xs-12">
-                            <div class="col-xs-12 wrap boxshadow">
-                                <div class="name">
-                                    <a href="#/restaurant/{{ res.id }}">{{ res.name }}</a>
+                <div ng-repeat="res in bestScoreRestaurants">
+                    <section class="col-md-4 col-sm-6 bodycontent__item">
+                        <div class="col-xs-12 bodycontent__img boxshadow">
+                            <a href="#/restaurant/{{ res.id }}">
+                                <span class="location">
+                                        <i class="fa fa-map-marker" aria-hidden="true"></i> {{ res.area }}
+                                    </span>
+                                <div class="row wrapimg img-effect-2" crop-img wrap-height="0.5" ng-style="wrapSize">
+                                    <img class="img" ng-style="imgSize" ng-src="upload/{{ res.img }}_thumb.jpg" />
                                 </div>
-                                <div class="">{{ res.type }}</div>
-                                <div>
-                                    <div class="price">
-                                        ฿ {{ res.price.min }}-{{ res.price.max }}
+                            </a>
+                        </div>
+                        <div class="row bodycontent__detail">
+                            <div class="col-xs-12">
+                                <div class="col-xs-12 wrap boxshadow">
+                                    <div class="name">
+                                        <a href="#/restaurant/{{ res.id }}">{{ res.name }}</a>
                                     </div>
-                                    <div class="score">
-                                        <i class="fa fa-heart" aria-hidden="true"></i> <b>{{ res.score }}</b>
+                                    <div class="">{{ res.type }}</div>
+                                    <div>
+                                        <div class="price">
+                                            ฿ {{ res.price.min }}-{{ res.price.max }}
+                                        </div>
+                                        <div class="score" ng-if="res.score>0">
+                                            <i class="fa fa-heart" aria-hidden="true"></i> <b>{{ res.score }}</b>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </section>
+                    </section>
+                    <div ng-show="($index%3)==2" class="visible-md visible-lg col-md-12"></div>
+                    <div ng-show="($index%2)==1" class="visible-sm col-sm-12"></div>
+                </div>
             </div>
         </div>
     </div>
