--- a/views/add-coupon2.html
+++ b/views/add-coupon2.html
@@ -7,6 +7,7 @@
 </div>
 <div class="container" style="margin-bottom: 30px;">
     <div class="row blanktop--normal"></div>
+    <navigator title-level1="เพิ่มคูปอง" url-level1="#/add-coupon" title-level2="{{restaurant.name}}"></navigator>
     <div class="row text-center">
         <h1 class="font-2"><i class="fa fa-cutlery"></i> เพิ่มคูปอง</h1>
     </div>
@@ -58,43 +59,44 @@
         </form>
 
     </div>
+</div>
 
 
-    <div id="successAddCoupon" class="modal animated bounceIn" role="dialog">
-        <div class="modal-dialog modal-sm text-center">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <img src="imgs/correct.png" alt="">
-                    <p>เพิ่มคูปองให้ร้านของคุณเรียบร้อยแล้ว</p>
-                    <button type="button" class="btn btn-warning" data-dismiss="modal">ดูคูปอง</button>
-                </div>
+<div id="successAddCoupon" class="modal animated bounceIn" role="dialog">
+    <div class="modal-dialog modal-sm text-center">
+        <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <img src="imgs/correct.png" alt="">
+                <p>เพิ่มคูปองให้ร้านของคุณเรียบร้อยแล้ว</p>
+                <button type="button" class="btn btn-warning" data-dismiss="modal">ดูคูปอง</button>
             </div>
         </div>
     </div>
+</div>
 
-    <div id="warningAddCoupon" class="modal" role="dialog">
-        <div class="modal-dialog modal-sm text-center">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <img src="imgs/warning.png" alt="">
-                    <p>กรุณากรอกข้อมูลให้ครบถ้วน</p>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">แก้ไข</button>
-                </div>
+<div id="warningAddCoupon" class="modal" role="dialog">
+    <div class="modal-dialog modal-sm text-center">
+        <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <img src="imgs/warning.png" alt="">
+                <p>กรุณากรอกข้อมูลให้ครบถ้วน</p>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">แก้ไข</button>
             </div>
         </div>
     </div>
+</div>
 
-    <div id="warningAddCoupon2" class="modal" role="dialog">
-        <div class="modal-dialog modal-sm text-center">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <img src="imgs/warning.png" alt="">
-                    <p>ร้านนี้มีคูปองอยู่แล้วครับ</p>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">ตกลง</button>
-                </div>
+<div id="warningAddCoupon2" class="modal" role="dialog">
+    <div class="modal-dialog modal-sm text-center">
+        <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <img src="imgs/warning.png" alt="">
+                <p>ร้านนี้มีคูปองอยู่แล้วครับ</p>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">ตกลง</button>
             </div>
         </div>
     </div>
+</div>
