--- a/views/add-restaurant.html
+++ b/views/add-restaurant.html
@@ -7,6 +7,7 @@
 </div>
 <div class="container" style="margin-bottom: 30px;">
     <div class="row blanktop--normal"></div>
+    <navigator title-level1="เพิ่มร้านอาหาร"></navigator>
     <div class="row text-center">
         <h1 class="font-2"><i class="fa fa-cutlery"></i> เพิ่มร้านอาหาร</h1>
     </div>
