--- a/views/list-coupons.html
+++ b/views/list-coupons.html
@@ -2,6 +2,7 @@
     <header-app search-bar=true></header-app>
     <div class="col-xs-12 resbody">
         <div class="container">
+            <navigator title-level1="คูปอง"></navigator>
             <a ng-href="#/coupon/{{ coupon.id }}">
                 <div class="row listcoupon boxshadow" ng-repeat="coupon in coupons">
                     <div class="col-xs-12" style="padding-left: 0px;">
