--- a/views/show-coupon.html
+++ b/views/show-coupon.html
@@ -2,6 +2,10 @@
     <header-app search-bar=true></header-app>
     <div class="col-xs-12 resbody">
         <div class="container">
+            <navigator
+                title-level1="คูปอง"
+                url-level1="#/coupons"
+                title-level2="{{coupon.name}}"></navigator>
             <div class="row">
                 <div class="panel panel-default showcoupon" style="border-radius: 0px;">
                     <div class="panel-body">
