--- a/views/add-coupon.html
+++ b/views/add-coupon.html
@@ -7,6 +7,7 @@
 </div>
 <div class="container" style="margin-bottom: 30px;">
     <div class="row blanktop--normal"></div>
+    <navigator title-level1="เพิ่มคูปอง"></navigator>
     <div class="row text-center">
         <h1 class="font-2"><i class="fa fa-cutlery"></i> เพิ่มคูปอง</h1>
     </div>
@@ -66,3 +67,4 @@
         </form>
 
     </div>
+</div>
